@@ -1,0 +1,11 @@
+lambdamax.diag <-
+function(x)
+{
+    y <- mcmcapply(x, array)
+    rval <- if (nvar(x) == 1) {
+        sd(y)
+    } else {
+        max(eigen(var(y), symmetric=TRUE, only.values=TRUE)$val)
+    }
+    rval
+}
